# wejr

./: README.md  README.rst  pyproject.toml
wejr/: consumers.py  router.py
