[tool.poetry]
name = "wejr"
version = "0.1.0"
description = "Communication via websocket in JSON-RPC way"
authors = ["Wasth <riasta@yandex.ru>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
channels = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.3.5"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
